[package]
name = "wgpu-bugs"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
wgpu = { git = "https://github.com/cwfitzgerald/wgpu-rs.git", version = "*", rev = "d12d142" }
